Many updates to the pom in the first stab of packaging an EXE Added an icon file